      to their local variables [Ralph]
    * "read item description" counterpart to existing "read item name"
      [James]
    * "get sprite default pal" [James]
    * "NPC is disabled" for detecting when an NPC reference is disabled
      by tags or by one-time-use [James]
    * "string sprintf" for easier piecing together of strings [Ralph]
    * "script error", "get calling script id", "get script name" [Ralph]
    * Make $id="foo" return id so that you can write showstring($1="foo")
    * Press F5 in Custom's main menu or Script Management menu to
      reimport the last imported scripts. And while testing a game
      you can now set the scripts to be reloaded automatically (from the
      F5 in-game debug menu) [Ralph]
    * "camera follows slice" [Ralph]
    * "get/set/reset hero picture/palette" family of commands can now
      also manipulate hero portrait pictures [James]
    * "get level mp" now takes an additional argument, "current stat"
      or "maximum stat" [Ralph]
    * plotscr.hsd, scancodes.hsi and your game's .hsi file are now all
      included automatically, so there's no need to put those "include"
      lines at the top of your scripts file [Ralph]
    * "get/set active battle pause on all menus" [James]
    * "dissolve sprite", "cancel dissolve", "sprite is dissolving",
      "wait for dissolve" [James]
    * "running on desktop", "running on mobile", "running on console",
      "running on windows", "running on mac", "running on linux"
    * "show virtual gamepad", "hide virtual gamepad",
      "auto virtual gamepad" [James]
    * "get horiz align", "get vert align", "get horiz anchor",
      "get vert anchor" [James]
    * "create select" "slice is select" "set slice select index"
      "get slice select index" "slice child index" [James]
    * "create scroll" "slice is scroll" "set scroll bar style"
      "get scroll bar style" "set scroll check depth"
      "get scroll check depth" "scroll to child" [James]