@@ -137,7 +137,8 @@ December ?? 2015 [Callipygous]
     * "NPC is disabled" for detecting when an NPC reference is disabled
       by tags or by one-time-use [James]
     * "string sprintf" for easier piecing together of strings [Ralph]
-    * "script error", "get calling script id", "get script name" [Ralph]
+    * "script error", "get calling script id", "get script name",
+      "dump slice tree" [Ralph]
     * Make $id="foo" return id so that you can write showstring($1="foo")
     * Press F5 in Custom's main menu or Script Management menu to
       reimport the last imported scripts. And while testing a game
